# automl-salary-predictions

./: Makefile  notebook.ipynb  pyproject.toml  readme.md
models/: learner.pkl
models/models/: trainer.pkl
models/models/CatboostRegressor/: model.pkl
models/models/KNeighborsRegressorDist/: model.pkl
models/models/KNeighborsRegressorUnif/: model.pkl
models/models/LightGBMRegressor/: model.pkl
models/models/LightGBMRegressorCustom/: model.pkl
models/models/LightGBMRegressorXT/: model.pkl
models/models/NeuralNetRegressor/: model.pkl  net.params
models/models/weighted_ensemble_k0_l1/: model.pkl
models/models/weighted_ensemble_k0_l1/utils/: model_template.pkl  oof.pkl
models/utils/data/: X_train.pkl  X_val.pkl  y_train.pkl  y_val.pkl
