[tool.poetry]
name = "automl-salary-prediction"
version = "1.0.0"
description = "Using Auto ML to predict salaries based on property infos"
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.7.5"
numpy = "1.17.2"
autogluon = "^0.0.14"
mxnet = "^1.7.0"
matplotlib = "3.3.2"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
